unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/Centro__Ask_Grok_Log__c.object-meta.xml
<CustomObject>
    <label>Ask Grok Log</label>
    <nameField>
        <displayFormat>{YY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ask Grok Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>