unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Answer__c.field-meta.xml
<CustomField>
    <fullName>Centro__Answer__c</fullName>
    <label>Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>