unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Prompt__c.field-meta.xml
<CustomField>
    <fullName>Centro__Prompt__c</fullName>
    <label>Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>