unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Salesforce_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Centro__Salesforce_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ask_Grok_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>