unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Salesforce_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Salesforce_User_Name__c</fullName>
    <label>Slack User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>