unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__SessionId__c.field-meta.xml
<CustomField>
    <fullName>Centro__SessionId__c</fullName>
    <label>Grok Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>