unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Centro__Slack_User_Id__c</fullName>
    <label>Slack User Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>