unpackaged/main/default/objects/Centro__Ask_Grok_Log__c/fields/Centro__Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Centro__Topic_Name__c</fullName>
    <label>Topic Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>